src/main/java/com/example/carsharing/error/user/UserErrorHandler.java
package com.example.carsharing.error.user;

import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.ControllerAdvice;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;

@ControllerAdvice
public class UserErrorHandler extends ResponseEntityExceptionHandler {

    @ExceptionHandler(UserNotFoundException.class)
    public ResponseEntity<Object> handleTaskNotFoundException(UserNotFoundException exception) {
        return new ResponseEntity<>("Group with given id doesn't exists", HttpStatus.BAD_REQUEST);
    }

}
